...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/auth_nav_graph"
    >

    <fragment
        android:id="@+id/splashFragment"
        android:name="ca.dal.bartertrader.presentation.view.SplashFragment"
        android:label="@string/title_splash_fragment_label"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_providerHomeFragment"
            app:destination="@id/provider_nav_graph" />
...
