<resources>
    <!-- Titles -->
    <string name="title_app_name">Barter Trader</string>
    <string name="title_email_placeholder">Email</string>
    <string name="title_password_placeholder">Password</string>
    <string name="title_first_name_placeholder">First Name</string>
    <string name="title_last_name_placeholder">Last Name</string>
    <string name="title_confirmed_password_placeholder">Confirmed Password</string>
    <string name="title_provider">Provider</string>
    <string name="title_receiver">Receiver</string>
    <string name="title_select_role">Please select a default role.</string>


    <!-- Messages -->
    <string name="message_logo">Barter Trader\'s Logo</string>
    <string name="message_not_registered">Not Registered?</string>
    <string name="message_have_an_account">Have an account?</string>
    <string name="message_agree_to_terms">By clicking on "Register", you hereby acknowledge and agree to our terms and services.</string>

    <!-- Errors -->

    <string name="error_email_invalid">Please enter your email in the format: user@example.com </string>

    <!-- Actions -->
    <string name="action_go_to_login">Login</string>
    <string name="action_register">REGISTER</string>
    <string name="action_remember_me">Remember Me</string>
    <string name="action_go_to_reset_password">Forgot Password?</string>
    <string name="action_login">LOG IN</string>
    <string name="action_go_to_registration">Create an account.</string>

    <!-- Labels (Titles Subclass) -->
    <string name="title_splash_fragment_label">Splash</string>
    <string name="title_provider_home_fragment_label">Provider Homepage</string>
    <string name="title_registration_fragment_label">Registration</string>
    <string name="title_login_fragment_label">Login</string>
    <string name="title_start_up_fragment_label">Start Up</string>
    <string name="title_password_reset_fragment_label">Password Reset</string>
    <string name="title_handle_post_fragment_label">Modify Post</string>
    <string name="error_password_weak">Password must be 8 letters long and include one of each type character: lowercase, uppercase, special, number.</string>
    <string name="error_password_empty">Password cannot be empty.</string>
    <string name="error_password_no_match">Confirmed password does not match password.</string>
    <string name="message_reset_password">Provide the email associated with your account!</string>
    <string name="action_go_back">BACK</string>
    <string name="action_sendEmail">Send Email</string>
    <string name="title_search_placeholder">Search…</string>
    <string name="temp_image_placeholder">Temporary Image</string>
    <string name="message_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis lorem ac nunc convallis, ut gravida orci varius. Curabitur laoreet massa id purus posuere, et blandit risus egestas. Cras rutrum semper fermentum. Proin ut auctor augue, eget ullamcorper ante. Ut dictum diam vitae purus porta, sit amet consectetur dolor hendrerit. Praesent ac nulla porta purus rutrum tincidunt ac et ligula. Pellentesque pulvinar sed urna in faucibus. Praesent id tellus a mi aliquam vehicula condimentum at lorem.</string>
    <string name="label_switch_role">Switch Role FAB</string>
    <string name="label_add_post">Add Post FAB</string>
    <string name="title_btm_nav_home">Home</string>
    <string name="title_btm_nav_profile">Profile</string>
    <string name="label_auth_flow">Account</string>
    <string name="title_auth_menu_item">Auth</string>
    <string name="title_search">Search</string>
    <string name="label_receiver_homepage">Receiver Homepage</string>
    <string name="label_filter">Filter</string>
    <string name="label_notifications">Notifications</string>
    <string name="title_user_nav">Home</string>

    <string name="chip_category_electronics">Electronics</string>
    <string name="chip_category_clothing">Clothing</string>
    <string name="chip_category_furniture">Furniture</string>
    <string name="chip_category_books">Books</string>
    <string name="chip_category_sporting_goods">Sporting Goods</string>
    <string name="chip_category_tools">Tools</string>
    <string name="chip_category_hobbies_and_crafts">Hobbies/Crafts</string>
    <string name="chip_category_misc">Misc</string>

    <!--  Provider Offer temporary labels  -->
    <string name="added">added</string>
    <string name="modified">modified</string>
    <string name="label_provider_offers">Provider Offers</string>
    <string name="post_image">Post Image</string>
    <string name="loading_account">Loading Account…</string>
    <string name="action_offer_item">Offer Item</string>

</resources>