<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="offer"
            type="ca.dal.bartertrader.domain.model.OfferModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_spacing">


            <TextView
                android:id="@+id/receiver_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_spacing"
                android:layout_marginStart="@dimen/default_spacing"
                android:text="@{`Offer: ` + offer.receiverPost.title}"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/receiver_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_spacing"
                android:text="Location: "
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@id/receiver_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receiver_title" />

            <TextView
                android:id="@+id/receiver_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_spacing"
                android:text="@{`Description: ` + offer.receiverPost.description}"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@id/expandable_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receiver_title" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandable_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_spacing"
                app:layout_constraintTop_toBottomOf="@+id/receiver_description">

                <TextView
                    android:id="@+id/provider_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_spacing"
                    android:text="@{`Your post: ` + offer.providerPost.title}"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/complete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:layout_marginRight="@dimen/default_spacing"
                    android:text="COMPLETE"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_title" />

                <TextView
                    android:id="@+id/accepted_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:text="ACCEPTED"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_title" />

                <TextView
                    android:id="@+id/declined_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:layout_marginRight="@dimen/default_spacing"
                    android:text="DECLINED"
                    android:textColor="@color/colorError"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_title" />


                <Button
                    android:id="@+id/accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="ACCEPT"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_title" />

                <Button
                    android:id="@+id/decline_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:backgroundTint="@color/colorError"
                    android:text="DECLINE"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_title" />

                <Button
                    android:id="@+id/review_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="REVIEW"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</layout>