<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="ProviderOfferViewModel"
            type="ca.dal.bartertrader.presentation.view_model.ProviderOfferViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_standard" android:id="@+id/toolbar" app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>