...

            android:padding="@dimen/default_spacing"
            android:id="@+id/handle_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Exchange Review Form"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
...
